tests/errors/ParameterCountMismatch.q
main() {
	f()
}

f(x int) -> int {
	return x
}